Working on room page

--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "react-webrtc",
+  "name": "node-webrtc",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "description": "",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
